--- a/src/main/resources/templates/MerchandiseManage/ItemEdit.html
+++ b/src/main/resources/templates/MerchandiseManage/ItemEdit.html
@@ -65,7 +65,7 @@
 
                                 <div class="form-group"><label class="col-sm-2 control-label">商品id：</label>
                                     <div class="col-sm-10">
-                                        <input id="id" name="id" readonly="readonly" type="text" class="form-control" th:value="${item.id}"/>
+                                        <infootable-page-arrow disabledput id="id" name="id" readonly="readonly" type="text" class="form-control" th:value="${item.id}"/>
                                     </div>
                                 </div>
                                 <div class="hr-line-dashed"></div>
